--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <div class="project-cont">
             <div class="project-card">
               <div class="project-img">
-                <img src="./assets/mvt.png" alt="project" loading="lazy">
+                <img src="./assets/mvt.jpg" alt="project" loading="lazy">
               </div>
               <div class="project-desc">
                 <h2>Movie Tickets</h2>
@@ -288,6 +288,7 @@
               <div class="sub-cont">
                 <div class="project-tags">
                   <p>Java</p>
+                  <p>Java Swing</p>
                 </div>
                 <div class="project-links">
                   <a href="https://github.com/suyogmgr/JCalculator" id="code" title="View Code">
@@ -305,7 +306,7 @@
             </div>
             <div class="project-card">
               <div class="project-img">
-                <img src="./assets/wallhaven-l855xr_1920x1080.png" alt="project" loading="lazy">
+                <img src="./assets/placeholder-image.png" alt="project" loading="lazy">
               </div>
               <div class="project-desc">
                 <h2>Project Name</h2>
@@ -318,12 +319,12 @@
                   <p>HTML5</p>
                 </div>
                 <div class="project-links">
-                  <a href="https://github.com/suyogmgr/Movie_ticket_Booking_System" id="code" title="View Code">
+                  <a href="#" id="code" title="View Code">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
                       <path d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z" />
                     </svg>
                   </a>
-                  <a href="http://ranaa.free.nf/" id="live" title="Live View" target="_blank">
+                  <a href="#" id="live" title="Live View" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
                       <path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z" />
                     </svg>
@@ -389,7 +390,7 @@
                 <title>GitHub</title>
                 <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
               </svg>
-              <a>
+            </a>
           </div>
           <div class="final-words">
             <span>
