--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
           </div>
           <div class="hero-btn">
-            <a href="#" class="resume">Download Resume</a>
+            <a href="CV.pdf" class="resume" download>Download Resume</a>
           </div>
           <div class="social-icons">
             <a href="#" data-socials="Instagram" style="--accent-icon: #ff0069">
